; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/text-freetype2/extr_text-freetype2.c_init_plugin.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/text-freetype2/extr_text-freetype2.c_init_plugin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@plugin_initialized = common dso_local global i32 0, align 4
@ft2_lib = common dso_local global i32* null, align 8
@LOG_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"FT2-text: Failed to initialize FT2.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_plugin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_plugin() #0 {
  %1 = load i32, i32* @plugin_initialized, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %17

4:                                                ; preds = %0
  %5 = call i32 @FT_Init_FreeType(i32** @ft2_lib)
  %6 = load i32*, i32** @ft2_lib, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %4
  %9 = load i32, i32* @LOG_WARNING, align 4
  %10 = call i32 @blog(i32 %9, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  br label %17

11:                                               ; preds = %4
  %12 = call i32 (...) @load_cached_os_font_list()
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %11
  %15 = call i32 (...) @load_os_font_list()
  br label %16

16:                                               ; preds = %14, %11
  store i32 1, i32* @plugin_initialized, align 4
  br label %17

17:                                               ; preds = %16, %8, %3
  ret void
}

declare dso_local i32 @FT_Init_FreeType(i32**) #1

declare dso_local i32 @blog(i32, i8*) #1

declare dso_local i32 @load_cached_os_font_list(...) #1

declare dso_local i32 @load_os_font_list(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
